--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,7 @@
 rootProject.name = 'Papilertus-Plugins'
 include 'Papilertus-Utils'
+include 'Papilertus-Economy'
+include 'Papilertus-Fun'
+include 'Papilertus-Music'
+include 'Papilertus-Birthdays'
 
