--- a/Papilertus-Music/build.gradle
+++ b/Papilertus-Music/build.gradle
@@ -4,26 +4,24 @@ plugins {
     id "com.github.johnrengelman.shadow" version "7.1.0"
 }
 
-configurations {
-    provided
-    compile.extendsFrom provided
-}
-
-java {
-    sourceCompatibility = 11
-    targetCompatibility = 11
-}
-
 group 'com.papilertus.plugins'
 version '1.0'
 
 repositories {
     mavenCentral()
+    maven {
+        url 'https://m2.dv8tion.net/releases'
+    }
+}
+
+java{
+    sourceCompatibility = 11
+    targetCompatibility = 11
 }
 
 dependencies {
     providedCompile files("../Papilertus-1.0-all.jar")
-    shadow 'org.apache.commons:commons-lang3:3.12.0'
+    shadow 'com.sedmelluq:lavaplayer:1.3.77'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
