--- a/Papilertus-Utils/build.gradle
+++ b/Papilertus-Utils/build.gradle
@@ -4,26 +4,27 @@ plugins {
     id "com.github.johnrengelman.shadow" version "7.1.0"
 }
 
-configurations {
-    provided
-    compile.extendsFrom provided
-}
+group 'com.papilertus.plugins'
+version '1.0'
 
-java {
+
+java{
     sourceCompatibility = 11
     targetCompatibility = 11
 }
-
-group 'com.openpackagedbot'
-version '1.0'
 
 repositories {
     mavenCentral()
 }
 
+repositories {
+    mavenCentral()
+}
+
+
 dependencies {
+
     providedCompile files("../Papilertus-1.0-all.jar")
-    shadow 'org.apache.commons:commons-lang3:3.12.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
