--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 plugins
+config
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
